--- a/ci/cloudbuild.yaml
+++ b/ci/cloudbuild.yaml
@@ -1,5 +1,6 @@
 steps:
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    ENTRYPOINT [ "bash", "entrypoint.sh" ]
     args:
     - '-c'
     - |
