--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
     steps:
       - name: Clone the repository
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
       
       - name: Zip the repository
         run: zip -r ${{env.DEPLOY_PACKAGE_NAME}} ./ -x *.git*
